# remote-builder

./: .gitignore  Dockerfile  README.md  docker-compose-server.yml  docker-compose-worker.yml  package.json  reset.sh  start-frontend.sh  start-server.sh  start-worker.sh
angular-demo/: .bazelrc  WORKSPACE  package.json
angular-demo/src/: app.component.ts
angular-demo/src/airplane/team0/: team0.module.ts
angular-demo/src/airplane/team1/: team1.module.ts
angular-demo/src/airplane/team3/: team3.module.ts
angular-demo/src/airplane/team4/: BUILD.bazel
angular-demo/src/airplane/team7/: BUILD.bazel
angular-demo/src/airplane/team9/: BUILD.bazel  team9.module.ts
angular-demo/tools/: BUILD.bazel
app/: .bazelrc  package.json
app/src/: BUILD.bazel  app.component.html  app.module.dev.ts  app.module.prod.ts
app/src/airplane/: BUILD.bazel  airplane.component.ts  airplane.module.ts
app/src/airplane/team0/: BUILD.bazel  team0.module.ts
app/src/airplane/team1/: BUILD.bazel
app/src/airplane/team2/: BUILD.bazel  team2.module.ts
app/src/airplane/team3/: BUILD.bazel
app/src/airplane/team4/: team4.module.ts
app/src/airplane/team5/: BUILD.bazel  team5.module.ts
app/src/airplane/team6/: BUILD.bazel  team6.module.ts
app/src/airplane/team7/: team7.module.ts
app/src/airplane/team8/: BUILD.bazel  team8.module.ts
frontend/: Dockerfile  docker-compose-angular.yml  docker-compose-app.yml  docker-compose-react.yml
react-demo/: .bazelrc  WORKSPACE
react-demo/src/frontend/config/: BUILD.bazel  friend-service.ts
react-demo/src/frontend/module1/mod1/friends/: BUILD.bazel  friends.tsx
react-demo/src/frontend/module1/mod10/friends/: BUILD.bazel  friend-service.ts
react-demo/src/frontend/module1/mod11/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod12/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod13/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod14/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod15/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod16/friends/: BUILD.bazel  friends.tsx
react-demo/src/frontend/module1/mod17/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod18/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod19/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod2/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod20/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod21/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod22/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod23/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod24/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod25/friends/: BUILD.bazel  friends.tsx
react-demo/src/frontend/module1/mod26/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod27/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod28/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod29/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod3/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod30/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod31/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod32/friends/: BUILD.bazel  friends.tsx
react-demo/src/frontend/module1/mod33/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod34/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod35/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod36/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod37/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod38/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod39/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod4/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod40/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod5/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod6/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod7/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod8/friends/: BUILD.bazel
react-demo/src/frontend/module1/mod9/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod1/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod10/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod11/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod12/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod13/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod14/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod15/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod16/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod17/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod18/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod19/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod2/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod20/friends/: BUILD.bazel
react-demo/src/frontend/module10/mod21/friends/: BUILD.bazel
react-demo/tools/: BUILD.bazel  bazel.rc
remote-build/: Dockerfile  docker-compose-server.yml  docker-compose-worker.yml  worker.config
(+784 files in other folders)
