package(default_visibility = ["//visibility:public"])
#load("@karma//:index.bzl", "karma_test")
load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "team0",
    srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
    deps = ["@angular//packages/router", "@rxjs","//src/airplane/team0/mod0:mod0","//src/airplane/team0/mod1:mod1","//src/airplane/team0/mod2:mod2","//src/airplane/team0/mod3:mod3","//src/airplane/team0/mod4:mod4","//src/airplane/team0/mod5:mod5","//src/airplane/team0/mod6:mod6","//src/airplane/team0/mod7:mod7","//src/airplane/team0/mod8:mod8","//src/airplane/team0/mod9:mod9"],
    tsconfig = "//:tsconfig.json",
)


      